Fix align utility classes

--- a/src/utility/_align.scss
+++ b/src/utility/_align.scss
@@ -1,14 +1,14 @@
 .align-center {
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: auto !important;
+	margin-right: auto !important;
 }
 
 .align-left {
-	margin-right: auto;
+	margin-right: auto !important;
 }
 
 .align-right {
-	margin-left: auto;
+	margin-left: auto !important;
 }
 
 .align-full {
